err/parasol.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/parasol'...
Compiling './lib/python3.5/site-packages/parasol/Goal.py'...
***   File "./lib/python3.5/site-packages/parasol/Goal.py", line 34
    print "ERROR unrecoverable in Goal.py"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/parasol/Optimize.py'...
***   File "./lib/python3.5/site-packages/parasol/Optimize.py", line 35
    print "ERROR... calling optimizer"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/parasol/Plots.py'...
***   File "./lib/python3.5/site-packages/parasol/Plots.py", line 25
    print 'saving Plot to',os.path.split(PS.pptDocName)[-1]
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/parasol/Plots_Cache.py'...
***   File "./lib/python3.5/site-packages/parasol/Plots_Cache.py", line 31
    print '  ----------------------------------- '
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/parasol/Summary.py'...
***   File "./lib/python3.5/site-packages/parasol/Summary.py", line 138
    print S.getTextSummary()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/parasol/Word_wrapper.py'...
***   File "./lib/python3.5/site-packages/parasol/Word_wrapper.py", line 237
    if text[-1] <> '\n':
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/parasol/examples'...
Compiling './lib/python3.5/site-packages/parasol/excel_const.py'...
***   File "./lib/python3.5/site-packages/parasol/excel_const.py", line 0
SyntaxError: unknown encoding: mbcs

Compiling './lib/python3.5/site-packages/parasol/make_zip.py'...
***   File "./lib/python3.5/site-packages/parasol/make_zip.py", line 23
    print info.filename, info.date_time, info.file_size, info.compress_size
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/parasol/parameters.py'...
***   File "./lib/python3.5/site-packages/parasol/parameters.py", line 264
    print 'WARNING... Switched to linear range in parameters.InputParam for min/max=%g/%g'%(self.minVal,self.maxVal)
                                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/parasol/parasol_main.py'...
***   File "./lib/python3.5/site-packages/parasol/parasol_main.py", line 109
    print '\n============================================================='
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/parasol/tests'...
Listing './lib/python3.5/site-packages/parasol-0.1.11.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
